src/styles/editor/editor-content.scss
@import "callout";
@import "./todo-list";

// Codeblock Dark mode
.neeto-ui-theme--dark .hljs {
  color: #383a42;
  background: #fafafa;
}

.neeto-ui-theme--dark .hljs-comment,
.neeto-ui-theme--dark .hljs-quote {
  color: #a0a1a7;
  font-style: italic;
}

.neeto-ui-theme--dark .hljs-doctag,
.neeto-ui-theme--dark .hljs-keyword,
.neeto-ui-theme--dark .hljs-formula {
  color: #a626a4;
}

.neeto-ui-theme--dark .hljs-section,
.neeto-ui-theme--dark .hljs-name,
.neeto-ui-theme--dark .hljs-selector-tag,
.neeto-ui-theme--dark .hljs-deletion,
.neeto-ui-theme--dark .hljs-subst {
  color: #e45649;
}

.neeto-ui-theme--dark .hljs-literal {
  color: #0184bb;
}

.neeto-ui-theme--dark .hljs-string,
.neeto-ui-theme--dark .hljs-regexp,
.neeto-ui-theme--dark .hljs-addition,
.neeto-ui-theme--dark .hljs-attribute,
.neeto-ui-theme--dark .hljs-meta .hljs-string {
  color: #50a14f;
}

.neeto-ui-theme--dark .hljs-attr,
.neeto-ui-theme--dark .hljs-variable,
.neeto-ui-theme--dark .hljs-template-variable,
.neeto-ui-theme--dark .hljs-type,
.neeto-ui-theme--dark .hljs-selector-class,
.neeto-ui-theme--dark .hljs-selector-attr,
.neeto-ui-theme--dark .hljs-selector-pseudo,
.neeto-ui-theme--dark .hljs-number {
  color: #986801;
}

.neeto-ui-theme--dark .hljs-symbol,
.neeto-ui-theme--dark .hljs-bullet,
.neeto-ui-theme--dark .hljs-link,
.neeto-ui-theme--dark .hljs-meta,
.neeto-ui-theme--dark .hljs-selector-id,
.neeto-ui-theme--dark .hljs-title {
  color: #4078f2;
}

.neeto-ui-theme--dark .hljs-built_in,
.neeto-ui-theme--dark .hljs-title.class_,
.neeto-ui-theme--dark .hljs-class .hljs-title {
  color: #c18401;
}

.neeto-ui-theme--dark .hljs-emphasis {
  font-style: italic;
}

.neeto-ui-theme--dark .hljs-strong {
  font-weight: bold;
}

.neeto-ui-theme--dark .hljs-link {
  text-decoration: underline;
}


// Codeblock Light mode
.neeto-ui-theme--light .hljs {
  color: #abb2bf;
  background: #282c34;
}

.neeto-ui-theme--light .hljs-comment,
.neeto-ui-theme--light .hljs-quote {
  color: #5c6370;
  font-style: italic;
}

.neeto-ui-theme--light .hljs-doctag,
.neeto-ui-theme--light .hljs-keyword,
.neeto-ui-theme--light .hljs-formula {
  color: #c678dd;
}

.neeto-ui-theme--light .hljs-section,
.neeto-ui-theme--light .hljs-name,
.neeto-ui-theme--light .hljs-selector-tag,
.neeto-ui-theme--light .hljs-deletion,
.neeto-ui-theme--light .hljs-subst {
  color: #e06c75;
}

.neeto-ui-theme--light .hljs-literal {
  color: #56b6c2;
}

.neeto-ui-theme--light .hljs-string,
.neeto-ui-theme--light .hljs-regexp,
.neeto-ui-theme--light .hljs-addition,
.neeto-ui-theme--light .hljs-attribute,
.neeto-ui-theme--light .hljs-meta .hljs-string {
  color: #98c379;
}

.neeto-ui-theme--light .hljs-attr,
.neeto-ui-theme--light .hljs-variable,
.neeto-ui-theme--light .hljs-template-variable,
.neeto-ui-theme--light .hljs-type,
.neeto-ui-theme--light .hljs-selector-class,
.neeto-ui-theme--light .hljs-selector-attr,
.neeto-ui-theme--light .hljs-selector-pseudo,
.neeto-ui-theme--light .hljs-number {
  color: #d19a66;
}

.neeto-ui-theme--light .hljs-symbol,
.neeto-ui-theme--light .hljs-bullet,
.neeto-ui-theme--light .hljs-link,
.neeto-ui-theme--light .hljs-meta,
.neeto-ui-theme--light .hljs-selector-id,
.neeto-ui-theme--light .hljs-title {
  color: #61aeee;
}

.neeto-ui-theme--light .hljs-built_in,
.neeto-ui-theme--light .hljs-title.class_,
.neeto-ui-theme--light .hljs-class .hljs-title {
  color: #e6c07b;
}

.neeto-ui-theme--light .hljs-emphasis {
  font-style: italic;
}

.neeto-ui-theme--light .hljs-strong {
  font-weight: bold;
}

.neeto-ui-theme--light .hljs-link {
  text-decoration: underline;
}
/* ... */

